force-app/main/default/objects/Provider__c/Provider__c.object-meta.xml
<CustomObject>
    <description>This object stores both template and patient providers. Providers in elixir are facilties.</description>
    <label>Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>