force-app/main/default/objects/Provider__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Used to store second address of provider.</description>
    <label>Address 2</label>
    <type>TextArea</type>
</CustomField>