force-app/main/default/objects/Provider__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Used to store address of provider.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>