force-app/main/default/objects/Provider__c/fields/ID_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>ID_Qualifier__c</fullName>
    <description>Use of identification codes or qualifiers to distinguish between different types of providers or to indicate specific attributes related to identification.</description>
    <label>ID Qualifier</label>
    <type>TextArea</type>
</CustomField>