force-app/main/default/objects/Provider__c/fields/Patient_Provider__c.field-meta.xml
<CustomField>
    <fullName>Patient_Provider__c</fullName>
    <description>Describes whether the record is patient provider or not.</description>
    <formula>IF( RecordType.Name = &apos;Patient Provider&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Provider</label>
    <type>Checkbox</type>
</CustomField>