force-app/main/default/objects/Provider__c/fields/Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Provider_City__c</fullName>
    <description>This field denotes the provider City information.</description>
    <label>Provider City</label>
    <length>18</length>
    <type>Text</type>
</CustomField>