force-app/main/default/objects/Provider__c/fields/Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Code__c</fullName>
    <description>This field denotes the provider NPI code information.</description>
    <label>Provider NPI</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>