force-app/main/default/objects/Provider__c/fields/Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_First_Name__c</fullName>
    <description>This field denotes the provider first name information.</description>
    <label>Provider First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>