force-app/main/default/objects/Provider__c/fields/Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Last_Name__c</fullName>
    <description>This field denotes the provider&apos;s last name information.</description>
    <label>Provider Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>