force-app/main/default/objects/Provider__c/fields/Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone__c</fullName>
    <description>Used to store provider phone information.</description>
    <label>Provider Phone</label>
    <type>Phone</type>
</CustomField>