force-app/main/default/objects/Provider__c/fields/Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Provider_State__c</fullName>
    <description>This field denotes the provider state information.</description>
    <label>Provider State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>