force-app/main/default/objects/Provider__c/fields/Provider_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Tax_Id__c</fullName>
    <description>This field denotes the provider tax Id information.</description>
    <label>Provider Tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>