force-app/main/default/objects/Provider__c/fields/Provider_TaxId_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_TaxId_Type__c</fullName>
    <description>This field denotes the type of provider tax Id.</description>
    <label>Provider TaxId Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>