force-app/main/default/objects/Provider__c/fields/Provider_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Provider_Taxonomy__c</fullName>
    <description>This field denotes the provider taxonomy information.</description>
    <label>Provider Taxonomy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>