force-app/main/default/objects/Provider__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>This field denotes the type of provider.</description>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>