force-app/main/default/objects/Provider__c/fields/Provider_Zip__c.field-meta.xml
<CustomField>
    <fullName>Provider_Zip__c</fullName>
    <description>This field denotes the provider zip information.</description>
    <label>Provider Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>