force-app/main/default/objects/Provider__c/fields/RecordTypeDeveloperName1__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName1__c</fullName>
    <description>This field is updated via a flow to fetch the recordtype of record to be used in Matching rule.</description>
    <label>RecordTypeDeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>