force-app/main/default/objects/Provider__c/fields/Tax_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id_Type__c</fullName>
    <description>This field denotes the type of provider tax Id.</description>
    <label>Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
                <default>true</default>
                <label>EIN</label>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>