force-app/main/default/objects/Provider__c/recordTypes/Patient_Provider.recordType-meta.xml
<RecordType>
    <fullName>Patient_Provider</fullName>
    <active>true</active>
    <label>Patient Provider</label>
</RecordType>