force-app/main/default/objects/Provider__c/recordTypes/Template_Provider.recordType-meta.xml
<RecordType>
    <fullName>Template_Provider</fullName>
    <active>true</active>
    <label>Template Provider</label>
</RecordType>