force-app/main/default/objects/Provider__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Provider_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Provider__c.Patient_Provider</value>
    </filters>
    <label>Patient Providers</label>
</ListView>