force-app/main/default/objects/Provider__c/listViews/Template_Providers.listView-meta.xml
<ListView>
    <fullName>Template_Providers</fullName>
    <columns>NAME</columns>
    <columns>Provider_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Provider__c.Template_Provider</value>
    </filters>
    <label>Template Providers</label>
</ListView>